added chartkick and new organisation path

--- a/app/views/databreaches/edit.html.erb
+++ b/app/views/databreaches/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this databreach", @databreach %> |
+  <%= link_to "Show this databreach #{@databreach.organisation}", @databreach %> |
   <%= link_to "Back to databreaches", databreaches_path %>
 </div>
