--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+<!--    <script src="https://code.highcharts.com/highcharts.js"></script>-->
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%#= javascript_importmap_tags %>
+    <%#= javascript_pack_tag 'application' %>
+    <%#= javascript_import_module_tag "controllers/find_organisation" %>
+    <%= javascript_include_tag "application" %>
+    <%= yield :javascript_includes %>
+    <%# Chartkick will only work with the following line
+    https://stackoverflow.com/questions/73452250/chartkick-not-loading-in-ruby-on-rails-7
+    %>
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </head>
 
   <%= render "home/header" %>
   <div class="container">
     <%= yield %>
   </div>
-  Footer here
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
