--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Hello</h1>
-<p>THis i my first rails web app</p>
-<%= link_to 'databreaches' %>
+<h1>Application</h1>
+<p>Click the following link to see a list of all data breaches
+<%= link_to 'Databreaches', databreaches_path %>
+</p>
+<p>Charts here
+<%= link_to 'Charts', charts_path %>
+</p>
