--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,14 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%#= javascript_importmap_tags %>
     <%#= javascript_pack_tag 'application' %>
-    <%#= javascript_import_module_tag "controllers/find_organisation" %>
+    <%#= javascript_import_module_tag "controllers/find_org" %>
     <%= javascript_include_tag "application" %>
     <%= yield :javascript_includes %>
     <%# Chartkick will only work with the following line
     https://stackoverflow.com/questions/73452250/chartkick-not-loading-in-ruby-on-rails-7
     %>
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
   </head>
 
   <%= render "home/header" %>
