--- a/app/views/databreaches/index.html.erb
+++ b/app/views/databreaches/index.html.erb
@@ -4,6 +4,13 @@
 <%= link_to "Add a data breach here", new_databreach_path %>
 <hr></hr>
 <h3>All data breaches</h3>
+
+<%#= form_tag find_org_path :method => "get" do %>
+  <%#= label_tag :search, "Company name" %>
+  <%#= text_field_tag :search, params[:search] %>
+  <%#= submit_tag "Search", :organisation => nil  %>
+<%# end %>
+
 <div id="databreaches">
   <% @databreaches.each do |databreach| %>
     <%= render databreach %>
